--- a/src/pages/offres.astro
+++ b/src/pages/offres.astro
@@ -8,10 +8,9 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<title>Accueil</title>
+		<title>Offres</title>
 	</head>
 	<body>
-		<h1>Accueil</h1>
+		<h1>Offres</h1>
 	</body>
 </html>
-
