--- a/src/pages/offres.astro
+++ b/src/pages/offres.astro
@@ -1,5 +1,5 @@
 ---
-
+import Header from "../components/Header.astro";
 ---
 
 <html lang="en">
@@ -11,6 +11,7 @@
 		<title>Offres</title>
 	</head>
 	<body>
+        <Header/>
 		<h1>Offres</h1>
 	</body>
 </html>
