--- a/src/pages/offres.astro
+++ b/src/pages/offres.astro
@@ -1,17 +1,8 @@
 ---
-import Header from "../components/Header.astro";
+import Base from "../layout/Base.astro";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<title>Offres</title>
-	</head>
-	<body>
-        <Header/>
-		<h1>Offres</h1>
-	</body>
-</html>
+
+<Base titre="Offres">
+	<h1>Offres</h1>
+</Base>
