--- a/src/pages/offres.astro
+++ b/src/pages/offres.astro
@@ -2,5 +2,6 @@
 import Base from "../layout/Base.astro";
 ---
 <Base titre="Offres">
-	<h1>Offres</h1>
+	<h1 class="text-4xl p-8">Offres</h1>
+	<p class="p-8">Ceci est la page des offres. Vous trouverez sur cette page différentes offres</p>
 </Base>
