--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,11 @@
 ---
 
 ---
-<nav>
-    <a href="/">Accueil</a>
-    <a href="/offres">Offres</a>
-</nav>
+<header class="px-8 bg-cyan-700 fixed top-0 left-0 w-full shadow-md z-10">
+    <nav class="container mx-auto p-4">
+        <ul>
+            <li><a class="text-white" href="/">Accueil</a></li>
+            <li><a class="text-white" href="/offres">Offres</a></li>
+        </ul>
+    </nav>
+</header>
