--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Base from "../layout/Base.astro";
 ---
 <Base titre="Accueil">
-	<h1>Accueil</h1>
+	<h1 class="text-4xl p-8">Accueil</h1>
+	<p class="p-8">Ceci est la page d'Accueil</p>
 </Base>
 
