--- a/src/pages/offres.astro
+++ b/src/pages/offres.astro
@@ -3,55 +3,55 @@ import Base from "../layout/Base.astro";
 import Card from "../components/Card.astro";
 
 const offres = [
-    {
-        "adresse": "2821 Lake Sevilla, Palm Harbor, TX",
-        "favori": true,
-        "id": "64l3n8nar836i5j",
-        "nbChambres": 4,
-        "nbSdb": 2,
-        "nomMaison": "Beverly Springfield",
-        "prix": 2700,
-        "surface": 45,
-        "imgUrl": "image1.png"
-    },
-    {
-        "adresse": "2699 Green Valley, Highland Lake",
-        "favori": true,
-        "id": "lo831zeg10hpm9y",
-        "nbChambres": 4,
-        "nbSdb": 2,
-        "nomMaison": "Palm Harbor",
-        "prix": 2095,
-        "surface": 42,
-        "imgUrl": "image2.png"
-    },
-    {
-        "adresse": "909 Woodland St, Michigan, IN",
-        "favori": false,
-        "id": "s1zuhj19x8eb242",
-        "nbChambres": 4,
-        "nbSdb": 3,
-        "nomMaison": "Faulkner Ave",
-        "prix": 4550,
-        "surface": 80,
-        "imgUrl": "image3.png"
-    }
+	{
+		"adresse": "2821 Lake Sevilla, Palm Harbor, TX",
+		"favori": true,
+		"id": "64l3n8nar836i5j",
+		"nbChambres": 4,
+		"nbSdb": 2,
+		"nomMaison": "Beverly Springfield",
+		"prix": 2700,
+		"surface": 45,
+		"imgUrl": "src/assets/image1.png"
+	},
+	{
+		"adresse": "2699 Green Valley, Highland Lake",
+		"favori": true,
+		"id": "lo831zeg10hpm9y",
+		"nbChambres": 4,
+		"nbSdb": 2,
+		"nomMaison": "Palm Harbor",
+		"prix": 2095,
+		"surface": 42,
+		"imgUrl": "src/assets/image2.jpg"
+	},
+	{
+		"adresse": "909 Woodland St, Michigan, IN",
+		"favori": false,
+		"id": "s1zuhj19x8eb242",
+		"nbChambres": 4,
+		"nbSdb": 3,
+		"nomMaison": "Faulkner Ave",
+		"prix": 4550,
+		"surface": 80,
+		"imgUrl": "src/assets/image3.jpg"
+	}
 ]
 ---
 <Base titre="Offres">
-	<h1 class="text-4xl">Offres</h1>
-	<p>Ceci est la page des offres. Vous trouverez sur cette page différentes offres</p>
+	<h1 class="text-4xl mb-4">Offres</h1>
+	<p class="mb-6">Ceci est la page des offres. Vous trouverez sur cette page différentes offres</p>
 	<div x-data="{ showFavorites: false }">
-		<button @click="showFavorites = !showFavorites">
+		<button @click="showFavorites = !showFavorites" class="mb-4 px-4 py-2 bg-blue-500 text-white rounded">
 			<span x-show="!showFavorites">Afficher les favoris</span>
 			<span x-show="showFavorites">Afficher tout</span>
 		</button>
 	
-		<div x-show="!showFavorites">
+		<div x-show="!showFavorites" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
 			{offres.map((offre) => <Card {...offre} />)}
 		</div>
-		<div x-show="showFavorites">
-            {offres.map((offre) => offre.favori && <Card {...offre} />)}
+		<div x-show="showFavorites" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+			{offres.map((offre) => offre.favori && <Card {...offre} />)}
 		</div>
 	</div>
 </Base>
