--- a/src/pages/offres/index.astro
+++ b/src/pages/offres/index.astro
@@ -1,8 +1,8 @@
 ---
-import Base from "../layout/Base.astro";
-import Card from "../components/Card.astro";
+import Base from "../../layout/Base.astro";
+import Card from "../../components/Card.astro";
 
-import { getOffres } from "../backend.mjs";
+import { getOffres } from "../../backend.mjs";
 const events = await getOffres();
 ---
 <Base titre="Offres">
