--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -2,8 +2,8 @@
 const {nomMaison, nbChambres, nbSdb, prix, surface, favori, adresse, imgUrl,id} = Astro.props;
 ---
 
-<div x-data={`{favori: ${favori}}`} class="card p-4 rounded-lg shadow-lg">
-    <img src={imgUrl} alt={nomMaison} class="w-full h-48 object-cover rounded-t-lg mb-4" />
+<div x-data={`{favori: ${favori}}`} class="card p-2 rounded-lg shadow-lg">
+    <img src={imgUrl} alt={nomMaison} />
     <h2 class="text-xl font-bold mb-2">{nomMaison}</h2>
 <!--
     <p class="text-gray-600 mb-1">{adresse}</p>
