--- a/src/pages/offres/index.astro
+++ b/src/pages/offres/index.astro
@@ -38,4 +38,5 @@ const events = await getOffres();
             {events.map((offre) => <Card {...offre} />)}
         </div>
     </div>
+	<a href="/offres/add" class="mb-4 px-4 py-2 bg-blue-500 text-white rounded">Ajouter une offre</a>
 </Base>
