--- a/src/layout/Base.astro
+++ b/src/layout/Base.astro
@@ -15,7 +15,7 @@ const { titre } = Astro.props;
     </head>
     <body>
         <Header/>
-        <Hero Pagetitre = {titre}/>
+        <!--<Hero Pagetitre = {titre}/>-->
         <main class="p-8">
             <slot />
         </main>
