--- a/src/pages/offres/add.astro
+++ b/src/pages/offres/add.astro
@@ -5,7 +5,6 @@ import {addOffre} from "../../backend.mjs"
 let message = '';
 if (Astro.request.method === "POST") {
     const formData = await Astro.request.formData();
-    console.log(formData)
     const response = await addOffre(formData);
     message = response.message;
 }
@@ -20,6 +19,7 @@ if (Astro.request.method === "POST") {
         <input type="number" name="nbSdb" placeholder="Nombre de salles de bain"  class="w-full mt-2 p-2 border border-gray-300 rounded-md"/>
         <input type="number" name="nbChambres" placeholder="Nombre de chambres"  class="w-full mt-2 p-2 border border-gray-300 rounded-md"/>
         <input type="number" name="surface" placeholder="Superficie"  class="w-full mt-2 p-2 border border-gray-300 rounded-md"/>
+        <input type="text" name="adresse" placeholder="Adresse"  class="w-full mt-2 p-2 border border-gray-300 rounded-md"/>
         <input type="file" name="image" />
         <button type="submit" class="mb-4 px-4 py-2 bg-blue-500 text-white rounded">Ajouter</button>
     </form>
