--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,6 +6,7 @@
         <ul>
             <li><a class="text-white" href="/">Accueil</a></li>
             <li><a class="text-white" href="/offres">Offres</a></li>
+            <li><a class="text-white" href="/agent" >Agents</a></li>
         </ul>
     </nav>
 </header>
